@@ -7,6 +7,7 @@
 - improved `Number.pluralize()` method
 - added `PROMISIFY(fn, [a], [b])` method
 - added `$.promisify(fn, [a], [b])` method
+- added `FILESTORAGE().copy(id, path, [callback(err, meta)])`
 
 ========================
 0.0.96
